--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -33,9 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@mipmap/logo3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:contentDescription="@string/image" />
 
 
     <LinearLayout
@@ -54,7 +52,8 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/username" />
+            android:id="@+id/username"
+            android:inputType="" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -84,14 +83,16 @@
             android:layout_height="wrap_content"
             android:text="@string/cancel"
             android:id="@+id/cancelBtn"
-            android:onClick="toUsersList" />
+            android:onClick="toUsersList"
+            tools:ignore="ButtonStyle" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save"
             android:id="@+id/saveBtn"
-            android:onClick="save" />
+            android:onClick="save"
+            tools:ignore="ButtonStyle" />
     </LinearLayout>
 
 </LinearLayout>
