--- a/app/src/main/res/layout/activity_photo_intent.xml
+++ b/app/src/main/res/layout/activity_photo_intent.xml
@@ -15,6 +15,7 @@
   ~ limitations under the License.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,17 +28,20 @@
         <Button android:text="@string/takeBigPicture" android:id="@+id/btnTakePhoto"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            tools:ignore="ButtonStyle" />
         <Button android:text="@string/takeSmallPicture" android:id="@+id/btnIntendS"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            tools:ignore="ButtonStyle" />
     </LinearLayout>
     <ImageView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:visibility="visible"
-        android:id="@+id/photo" />
+        android:id="@+id/photo"
+        android:contentDescription="@string/image" />
     <VideoView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
