--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -15,6 +15,7 @@
   ~ limitations under the License.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,7 +32,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/takeBigPicture"
             android:id="@+id/textView"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold" />
     </LinearLayout>
     <LinearLayout
@@ -42,18 +43,21 @@
         <Button android:text="@string/takeBigPicture" android:id="@+id/btnTakePhoto"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            tools:ignore="ButtonStyle" />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save"
             android:id="@+id/ok"
-            android:onClick="toChallenge"/>
+            android:onClick="toChallenge"
+            tools:ignore="ButtonStyle" />
     </LinearLayout>
     <ImageView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:visibility="visible"
-        android:id="@+id/photo" />
+        android:id="@+id/photo"
+        android:contentDescription="@string/image" />
 
 </LinearLayout>
