--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -15,7 +15,6 @@
   ~ limitations under the License.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,35 +26,38 @@
         android:layout_width="match_parent"
         >
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/blue"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/takeBigPicture"
             android:id="@+id/textView"
             android:textSize="30sp"
             android:textStyle="bold" />
     </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
+    <GridLayout
+        android:orientation="vertical"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         >
-        <Button android:text="@string/takeBigPicture" android:id="@+id/btnTakePhoto"
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            tools:ignore="ButtonStyle" />
         <Button
-            android:layout_width="wrap_content"
+            android:theme="@style/PhotoButton"
+            android:text="@string/takeBigPicture"
+            android:id="@+id/btnTakePhoto"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent" />
+        <Button
+            android:theme="@style/SaveButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/save"
             android:id="@+id/ok"
-            android:onClick="toChallenge"
-            tools:ignore="ButtonStyle" />
-    </LinearLayout>
+            android:onClick="toChallenge"/>
+    </GridLayout>
     <ImageView
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:visibility="visible"
         android:id="@+id/photo"
         android:contentDescription="@string/image" />
