--- a/app/src/main/res/layout/activity_data_analysis.xml
+++ b/app/src/main/res/layout/activity_data_analysis.xml
@@ -46,6 +46,7 @@
         android:id="@+id/information"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/blue"
         android:text="@string/users"
         android:textSize="25sp"
         android:typeface="normal"
@@ -76,6 +77,7 @@
         android:gravity="center_horizontal">
 
         <Button
+            android:theme="@style/GoBackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/goBack"
@@ -84,13 +86,11 @@
             tools:ignore="ButtonStyle" />
 
         <Button
+            android:theme="@style/GreenButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/stats"
             android:id="@+id/stats"
-            android:onClick="toStats"
-            android:layout_marginRight="112dp"
-            android:layout_marginEnd="112dp"
-            tools:ignore="ButtonStyle" />
+            android:onClick="toStats" />
     </LinearLayout>
 </LinearLayout>
