--- a/app/src/main/res/layout/activity_manage_words.xml
+++ b/app/src/main/res/layout/activity_manage_words.xml
@@ -21,10 +21,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/white"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         tools:context="br.com.ema.activities.admin.WordsManagementActivity">
 
     <GridLayout
@@ -33,28 +29,17 @@
         android:layout_weight="0.1"
         android:weightSum="1">
 
-
             <TextView
                 android:id="@+id/information"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/blue"
                 android:text="@string/words"
                 android:textSize="25sp"
                 android:typeface="normal"
                 android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:layout_gravity="end"
-                android:gravity="end"
-                android:src="@mipmap/logo3"
-                android:contentDescription="@string/logo"
-                android:adjustViewBounds="true" />
     </GridLayout>
-
-
 
 
         <LinearLayout
@@ -62,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="253dp"
             android:orientation="horizontal"
-            android:layout_weight="0.6"
+            android:layout_weight="0.8"
             android:weightSum="1"
             android:baselineAligned="false">
             <!--<CheckBox-->
@@ -78,48 +63,40 @@
                 android:clickable="true"
                 tools:ignore="InefficientWeight,NestedWeights" />
         </LinearLayout>
-    <LinearLayout
-        android:id="@+id/buttons"
-        android:layout_width="fill_parent"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        android:layout_weight="0.3"
-        android:layout_height="0dp">
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_weight="0.1"
+        android:id="@+id/actions">
 
         <Button
+            android:id="@+id/goBackBtn"
+            android:theme="@style/GoBackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/goBack"
-            android:id="@+id/goBackBtn"
-            android:onClick="goBack"
-            tools:ignore="ButtonStyle" />
-
+            android:onClick="goBack" />
         <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/delete"
-        android:id="@+id/deleteButton"
-        android:layout_gravity="center_horizontal"
-            tools:ignore="ButtonStyle" />
-
+            android:theme="@style/DeleteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/delete"
+            android:id="@+id/deleteButton" />
         <Button
+            android:theme="@style/EditButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/edit"
             android:id="@+id/editButton"
-            android:onClick="updateWord"
-            android:layout_gravity="center_horizontal"
-            tools:ignore="ButtonStyle" />
-
+            android:onClick="updateWord" />
         <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/add"
-                android:id="@+id/newWord"
-                android:onClick="addWord"
-            android:layout_marginRight="112dp"
-                android:layout_marginEnd="112dp"
-            tools:ignore="ButtonStyle" />
-    </LinearLayout>
+            android:theme="@style/AddButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add"
+            android:id="@+id/newWord"
+            android:onClick="addWord"/>
+    </GridLayout>
 
 </LinearLayout>
