--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,6 +73,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:theme="@style/BlueButton"
         android:text="@string/login"
         android:id="@+id/login"
         android:onClick="login"
