--- a/app/src/main/res/layout/activity_student_menu.xml
+++ b/app/src/main/res/layout/activity_student_menu.xml
@@ -22,7 +22,8 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="wrap_content"
+        style="@style/StudentDashboardButton"
         android:text="@string/play"
         android:id="@+id/play"
         android:layout_gravity="center_vertical|center_horizontal"
@@ -32,7 +33,8 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="wrap_content"
+        style="@style/StudentDashboardButton"
         android:text="@string/logout"
         android:layout_gravity="center_vertical|center_horizontal"
         android:id="@+id/button"
