--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent" />
         <Button
-            android:theme="@style/SaveButton"
+            android:theme="@style/BlueButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/save"
