--- a/app/src/main/res/values-en/styles.xml
+++ b/app/src/main/res/values-en/styles.xml
@@ -1,6 +1,5 @@
 <resources>
 
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
@@ -27,12 +26,64 @@
         <item name="android:background">@null</item>
     </style>
 
-    <style name="FooterBar">
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">40dp</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:background">#dedede</item>
+    <style name="StudentDashboardButton">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#1887C7</item>
+        <item name="android:background">@null</item>
     </style>
 
+
+    <style name="AddButton">
+        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorControlHighlight">@color/blue</item>
+        <item name="colorAccent">@color/blue</item>
+    </style>
+    <style name="DeleteButton">
+        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorControlHighlight">@color/red</item>
+        <item name="colorAccent">@color/red</item>
+    </style>
+    <style name="EditButton">
+        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorControlHighlight">@color/green</item>
+        <item name="colorAccent">@color/green</item>
+    </style>
+    <style name="GoBackButton">
+        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorControlHighlight">@color/black</item>
+        <item name="colorAccent">@color/black</item>
+    </style>
+    <style name="GreenButton">
+        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorControlHighlight">@color/green</item>
+        <item name="colorAccent">@color/green</item>
+    </style>
+    <style name="RedButton">
+        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorControlHighlight">@color/red</item>
+        <item name="colorAccent">@color/red</item>
+    </style>
+    <style name="PhotoButton" parent="Theme.AppCompat">
+        <item name="colorButtonNormal">@color/green</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorControlHighlight">@color/white</item>
+    </style>
+    <style name="BlueButton" parent="Theme.AppCompat">
+        <item name="colorButtonNormal">@color/blue</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorControlHighlight">@color/white</item>
+    </style>
 
 </resources>
