--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,19 @@
         <item name="android:background">@null</item>
     </style>
 
+    <style name="StudentDashboardButton">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#1887C7</item>
+        <item name="android:background">@null</item>
+    </style>
+
+
     <style name="AddButton">
         <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
         <item name="android:textStyle">bold</item>
@@ -56,12 +69,18 @@
         <item name="colorControlHighlight">@color/green</item>
         <item name="colorAccent">@color/green</item>
     </style>
+    <style name="RedButton">
+        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.Borderless.Colored</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorControlHighlight">@color/red</item>
+        <item name="colorAccent">@color/red</item>
+    </style>
     <style name="PhotoButton" parent="Theme.AppCompat">
         <item name="colorButtonNormal">@color/green</item>
         <item name="android:textStyle">bold</item>
         <item name="colorControlHighlight">@color/white</item>
     </style>
-    <style name="SaveButton" parent="Theme.AppCompat">
+    <style name="BlueButton" parent="Theme.AppCompat">
         <item name="colorButtonNormal">@color/blue</item>
         <item name="android:textStyle">bold</item>
         <item name="colorControlHighlight">@color/white</item>
